--- a/login_sigup.html
+++ b/login_sigup.html
@@ -16,7 +16,19 @@
 </head>
 
 <body>
-    <div class="nav"></div>
+    <div class="header">
+        <div class=""></div>
+        <div class="nav">
+            <div class="nav-item-1 nav-item bg-focus">
+                <a href="#" class="nav-button">Login</a>
+            </div>
+            <div class="nav-item-2 nav-item">
+                <a href="#" class="nav-button">Signup</a>
+            </div>
+        </div>
+        <span class="nav-slider"></span>
+    </div>
+
     <div class="container">
         <div class="forms">
             <div class="form login">
@@ -42,12 +54,10 @@
                             <label for="logCheck" class="text">Remember me</label>
                         </div>
 
-                        <a href="#" class="text">Forgot password?</a>
                     </div>
                     <div class="button-field">
-                        <div class="input-field button">
-                            <input type="button" value="Forgot password">
-
+                        <div class="input-field button danger-button ">
+                            <a href="forgot.html"><input type="button" value="Forgot password"></a>
                         </div>
                         <div class="input-field button">
 
@@ -64,41 +74,6 @@
                 </div>
             </div>
 
-            <!-- Forgot Password Form -->
-            <!-- <div class="form forgot">
-                <span class="title">Login</span>
-
-                <form action="#">
-                    <div class="input-field">
-                        <input type="text" placeholder="Enter your email" required>
-                        <i class="uil uil-envelope icon"></i>
-                    </div>
-                    <div class="input-field">
-                        <input type="password" class="password" placeholder="Enter your password" required>
-                        <i class="uil uil-lock icon"></i>
-                        <i class="uil uil-eye-slash showHidePw"></i>
-                    </div>
-
-                    <div class="checkbox-text">
-                        <div class="checkbox-content">
-                            <input type="checkbox" id="logCheck">
-                            <label for="logCheck" class="text">Remember me</label>
-                        </div>
-
-                        <a href="#" class="text">Forgot password?</a>
-                    </div>
-
-                    <div class="input-field button">
-                        <input type="button" value="Login">
-                    </div>
-                </form>
-
-                <div class="login-signup">
-                    <span class="text">Not a member?
-                        <a href="#" class="text signup-link">Signup Now</a>
-                    </span>
-                </div>
-            </div> -->
 
             <!-- Registration Form -->
             <div class="form signup">
@@ -124,7 +99,7 @@
                     </div>
 
 
-                    <div class="input-field button egistration-button">
+                    <div class="input-field button registration-button">
                         <input type="button" value="Signup">
                     </div>
                 </form>
@@ -173,6 +148,22 @@
             container.classList.remove("active");
         });
 
+    </script>
+
+    <script>
+        const button1 = document.querySelector(".nav-item-1"),
+            button2 = document.querySelector(".nav-item-2")
+        console.log(button1)
+        button1.addEventListener("click", () => {
+            button1.classList.add("bg-focus");
+            button2.classList.remove("bg-focus");
+            container.classList.remove("active");
+        })
+        button2.addEventListener("click", () => {
+            button2.classList.add("bg-focus");
+            button1.classList.remove("bg-focus");
+            container.classList.add("active");
+        })
     </script>
     <!--<script src="script.js"></script>-->
 </body>
