--- a/dashboard.html
+++ b/dashboard.html
@@ -6,11 +6,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <title>Document</title>
 </head>
 
 <body>
+    <div class="container">
+        <aside>
+            <div class="top">
+                <div class="profile">
+                    <img src="./assets/img/profile-img.png" alt="profile-img">
 
+                </div>
+                <h4>Roseanne</h4>
+                <h5>Roseanne@gmail.com</h5>
+            </div>
+            <div class="sidebar">
+                <a href="#">
+                    <i class="uil uil-user-circle"></i>
+                    <h3>Hồ sơ</h3>
+                </a>
+                <a href="#">
+                    <i class="uil uil-calender"></i>
+                    <h3>Lịch làm việc</h3>
+                </a>
+                <a href="#">
+                    <i class="uil uil-signout"></i>
+                    <h3>Đăng xuất</h3>
+                </a>
+            </div>
+        </aside>
+        <main>
+            <div class="nav">
+                <div class="logo">
+                    <img src="./assets/img/logo.png" alt="" srcset="">
+                    <div class="notify">
+                        <a href="">Thông báo (0)</a>
+
+                    </div>
+                </div>
+
+                <div class="user-name">
+                    <a href=""><b>Hi Roseanne!</b> </a>
+
+                </div>
+                <div class="user-msg">
+                    <a href="">Tin nhắn (0)</a>
+                </div>
+            </div>
+            <div class="content">
+                <div class="item">1</div>
+                <div class="item">2</div>
+                <div class="item">3</div>
+                <div class="item">4</div>
+            </div>
+            <div class="footer">CanteenHCMUS</div>
+        </main>
+    </div>
 </body>
 
 </html>
